--- a/public/500.html
+++ b/public/500.html
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>This website is a proof of concept based on incomplete sample data.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Mistakes and inconsistencies do not reflect our plans for future development.</p>
   </div>
 </body>
 </html>
